# LBD_Descriptor

./: CMakeLists.txt  EDLineDetector.cpp  EDLineDetector.hh  LineDescriptor.cpp  LineDescriptor.hh  LineStructure.hh  PairwiseLineMatching.cpp  PairwiseLineMatching.hh  Readme.md  Readme.txt  TestLineMatchingAlgorithm.cpp
